# openai-intelligent-agent

./: .env  .gitignore  README.md  business_demo.db  conversations.db  pyproject.toml  stream_output_demo.py
app/application/services/: agent_orchestrator.py
app/application/use_cases/: confirm_admin_action.py  request_admin_action.py  run_rag_query.py  run_sql_query.py
app/bootstrap/: app_factory.py  container.py
app/domain/models/: approval_ticket.py  conversation.py
app/domain/policies/: sql_policy.py
app/domain/ports/: sql_prot.py
app/entrypoints/api/: approval_controller.py  chat_controller.py
app/infrastructure/db/: mysql_readonly_adapter.py
app/infrastructure/llm/: openai_agents_adapter.py
docs/superpowers/plans/: 2026-04-24-openai-agents-ragflow-cs-agent-implementation-plan.md
docs/superpowers/specs/: 2026-04-24-openai-agents-ragflow-cs-agent-design.md
examples/: litellm_demo.py  orchestration_demo.py  rag_sql_orchestration_demo.py  sql_lite_session_demo.py
tests/: test_project_skeleton.py
tests/integration/: test_api_endpoints.py
tests/unit/application/: test_run_sql_query.py
tests/unit/infrastructure/: test_openai_agents_adapter.py  test_openai_agents_adapter_config.py
